# back/config/swagger.json
@@ -209,13 +209,13 @@
         }
       }
     },
-    "/enigme/{id_enigme}": {
+    "/enigme/{id}": {
       "get": {
-        "summary": "/enigme/{id_enigme}",
+        "summary": "/enigme/{id}",
         "consumes": ["application/json"],
         "parameters": [
           {
-            "name": "id_enigme",
+            "name": "id",
             "in": "path",
             "required": true
           }
@@ -232,7 +232,7 @@
       "post": {
         "summary": "/insertEnigme",
         "tags": ["Enigmes"],
-        "consumes": ["application/json"],
+        "consumes": ["application/x-www-form-urlencoded"],
         "parameters": [
           {
             "name": "titre",
@@ -257,12 +257,6 @@
             "in": "formData",
             "required": true,
             "type": "string"
-          },
-          {
-            "name": "id_user",
-            "in": "formData",
-            "required": true,
-            "type": "number"
           }
         ],
         "responses": {
@@ -275,10 +269,10 @@
     "/updateEnigme/{id}": {
       "put": {
         "summary": "/updateEnigme/{id}",
-        "consumes": ["application/json"],
+        "consumes": ["application/x-www-form-urlencoded"],
         "parameters": [
           {
-            "name": "id_enigme",
+            "name": "id",
             "in": "path",
             "required": true
           },
@@ -324,20 +318,23 @@
     "/deleteEnigme/{id}": {
       "delete": {
         "summary": "/deleteEnigme/{id}",
-        "consumes": ["application/json"],
+        "consumes": ["application/x-www-form-urlencoded"],
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "required": true
+            "required": true,
+            "type": "number"
           }
         ],
-        "responses": {"200": {
-          "description": "successful delete"},
+        "responses": {
+          "200": {
+            "description": "successful delete"
+          }
+        },
         "tags": ["Enigmes"]
       }
     }
-  }
-},
+  },
   "swagger": "2.0"
 }
